# Ethan

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLI_DESIGN.md  COMMAND_UX.md  DISCOVERY.md  EVENT_BUS.md  EVENT_LIFECYCLE.md  Makefile  PROMPT_INTELLIGENCE.md  README.md  ROADMAP.md  STARTUP_WORKFLOW.md  STREAMING.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ethan-launcher.sh  generate_dockerfiles.sh  mkdocs.yml  pyproject.toml  test_interfaces.sh  webui.sh
api/: main.py
apps/: __init__.py
apps/api/: main.py
cli/: __init__.py  ethan  registry.py  requirements.txt
cli/commands/: __init__.py  bench.py  cfg.py  chat.py  daemon.py  help.py  logs.py  memory.py  plugin.py  plugins.py  router.py  run.py  service.py  status.py  suggest.py  think.py  version.py
cli/core/: client.py  config.py  daemon.py  daemon_loop.py  debug_ui.py  discovery.py  error_classifier.py  errors.py  first_run.py  fix_map.py  loading.py  memory.py  retest_runner.py  self_heal.py  streaming.py  telemetry.py  ux.py
cli/systemd/: ethan-user.service  ethan.service  install-service.sh
configs/openjarvis/: config.toml
core/: __init__.py  _version.py  main.go  plugins.py  requirements.txt
core/agents/: __init__.py  autonomy.py  base.py  context.py  developer.py  executive.py  learning.py  memory.py  metacognition.py  planner.py  reflective.py  research.py  vision.py
core/api/: __init__.py  contracts.py  main.py
core/approval/: __init__.py  config.py  engine.py  types.py
core/audit/: __init__.py  store.py  types.py
core/auth/: __init__.py
core/autonomy/: bootstrap.py  curiosity.py  environment.py  healing.py  idle.py  scheduler.py
core/bootstrap/: bootstrapper.py  repair.py
core/bus/: __init__.py  interface.py  monitor.py  nats.py  nats_bus.py  priorities.py
core/capabilities/: __init__.py  llm_capability.py  memory_capability.py
core/cognition/: __init__.py  module.py  types.py
core/config/: __init__.py  loader.py  schema.py  secrets.py
core/context/: intent.py
core/cost/: __init__.py  budget.py  tracker.py  types.py
core/events/: __init__.py
core/executive/: __init__.py  executive.py  goal_manager.py  types.py
core/executor/: __init__.py  executor.py
core/facts/: __init__.py  ingest.py  retrieval.py  store.py  types.py
core/gateway/: gateway.go
core/intent/: intent.go
core/kernel/: __init__.py  bootstrap.py  engine.py
core/learning/: engine.py  modeler.py  store.py
core/llm/: __init__.py  client.py  manager.py  registry.py  router.py  selector.py  tracker.py  types.py
core/metacognition/: __init__.py  load.py  strategy.py
core/metrics/: __init__.py  healthcheck.py  logging_config.py  telemetry.py
core/modules/: __init__.py  base.py  capability.py  dependency.py  interface.py  permissions.py
core/orchestration/: __init__.py  cognitive_loop.py  example_usage.py  executor.py  observer.py  planner.py  (+2 more)
deploy/: Dockerfile.api
docs/: architecture.md  desktop-auto-update.md  downloads.md  index.md  leaderboard.md  telemetry.md
engineering/: MIGRATION_GUIDE.md  STABILITY_PLAN.md
ethan/: package-lock.json  package.json
ethan-cli/: ethan  install.sh
ethan-cli-minimal/: ethan
ethan-ui/: app.py  config.py  requirements.txt
frontend/: index.html  vite.config.ts
infra/: Dockerfile.kernel  Dockerfile.ui
install/: doctor.sh  install.sh  lib.sh  repair.sh  uninstall.sh  update.sh
interfaces/cli/: README.md  __init__.py  boot.py  client.py  config.py  install.sh  main.py  plugin_manager.py  pyproject.toml  registry.py  repl.py  session.py  startup.py
interfaces/cli/commands/: __init__.py  bench.py  cfg.py  chat.py  config_cmd.py  daemon.py  doctor.py  handler.py  help.py  logs.py  memory.py  parser.py  plugin.py  plugins.py  router.py  run.py  service.py  status.py  suggest.py  think.py  update.py  version.py
interfaces/cli/core/: __init__.py  client.py  colors.py  debug_trap.py  debug_ui.py  default_triggers.yaml  errors.py  first_run.py  intent.py  kernel_client.py  loading.py  logging.py  memory.py  retest_runner.py  self_heal.py  streaming.py  triggers.py  ux.py
interfaces/cli/ethan/ui/: __init__.py
interfaces/cli/plugins/hello-world/: manifest.json  plugin.py
interfaces/cli/ui/: __init__.py  colors.py  prompt.py  prompts.py  renderer.py  spinner.py
kernel/: README.md  __init__.py  bootstrap.py  go.mod  kernel.py  main.go  requirements.txt
legacy/: __init__.py  sdk.py
modules/: __init__.py
plugins/: __init__.py  loader.py  pyproject.toml  sandbox.py  tool_registry.py  validator.py  versioning.py
plugins/browser/: main.py  plugin.yaml
plugins/sdk/: base.py
plugins/terminal/: main.py  plugin.yaml
providers/: __init__.py
runtime/: go.mod  go.sum
rust/: Cargo.toml  rust-toolchain.toml
rust/crates/openjarvis-agents/: Cargo.toml
rust/crates/openjarvis-agents/src/: helpers.rs  monitor_operative.rs  native_openhands.rs  native_react.rs  orchestrator.rs  simple.rs  traits.rs  utils.rs
rust/crates/openjarvis-learning/: Cargo.toml
rust/crates/openjarvis-learning/src/: agent_evolver.rs  bandit.rs  grpo.rs  heuristic.rs  learning_orchestrator.rs  orchestrator_types.rs  reward.rs  router_enum.rs  training_data.rs  traits.rs
rust/crates/openjarvis-learning/src/optimize/: engine.rs  llm_optimizer.rs  mod.rs  search_space.rs  store.rs  types.rs
rust/crates/openjarvis-mcp/: Cargo.toml
rust/crates/openjarvis-mcp/src/: server.rs
rust/crates/openjarvis-python/: Cargo.toml  pyproject.toml
rust/crates/openjarvis-python/src/: a2a.rs  agents.rs  core.rs  engine.rs  learning.rs  lib.rs  mcp.rs  recipes.rs  scheduler.rs  security.rs  sessions.rs  skills.rs  storage.rs  telemetry.rs  templates.rs  tools.rs  traces.rs  workflow.rs
rust/crates/openjarvis-telemetry/: Cargo.toml
rust/crates/openjarvis-telemetry/src/: aggregator.rs  instrumented.rs  store.rs
scripts/: quickstart.sh  start_ethan.sh  stop_ethan.sh
sdk/: AGENTS.md  autonomy.py  event.py  goals.py  learning.py  metacognition.py  module.py
(+1107 files in other folders)
