[project]
name = "ethan-plugins"
version = "1.0.0"
description = "ETHAN Plugins — Extensions for ETHAN Cognitive Runtime"
authors = [{name = "ETHAN Team"}]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "nats-py>=2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]