[project]
name = "ethan-cli"
version = "1.0.0"
description = "ETHAN CLI — Terminal Interface for ETHAN Cognitive Runtime"
authors = [{name = "ETHAN Team"}]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
ethan = "ethan.main:main"

[build-system]
requires = ["setuptools>=68.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]