[package]
name = "ethan-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
ethan-core = { path = "../ethan-core" }
ethan-tools = { path = "../ethan-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
