[package]
name = "ethan-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
ethan-core = { path = "../openjarvis-core" }
ethan-tools = { path = "../openjarvis-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
