[package]
name = "ethan-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethan_rust"
crate-type = ["cdylib"]

[dependencies]
ethan-core = { path = "../ethan-core" }
ethan-engine = { path = "../ethan-engine" }
ethan-security = { path = "../ethan-security" }
ethan-tools = { path = "../ethan-tools" }
ethan-agents = { path = "../ethan-agents" }
ethan-traces = { path = "../ethan-traces" }
ethan-telemetry = { path = "../ethan-telemetry" }
ethan-learning = { path = "../ethan-learning" }
ethan-mcp = { path = "../ethan-mcp" }
ethan-sessions = { path = "../ethan-sessions" }
ethan-workflow = { path = "../ethan-workflow" }
ethan-skills = { path = "../ethan-skills" }
ethan-recipes = { path = "../ethan-recipes" }
ethan-templates = { path = "../ethan-templates" }
ethan-a2a = { path = "../ethan-a2a" }
ethan-scheduler = { path = "../ethan-scheduler" }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
