[package]
name = "ethan-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethan_rust"
crate-type = ["cdylib"]

[dependencies]
ethan-core = { path = "../openjarvis-core" }
ethan-engine = { path = "../openjarvis-engine" }
ethan-security = { path = "../openjarvis-security" }
ethan-tools = { path = "../openjarvis-tools" }
ethan-agents = { path = "../openjarvis-agents" }
ethan-traces = { path = "../openjarvis-traces" }
ethan-telemetry = { path = "../openjarvis-telemetry" }
ethan-learning = { path = "../openjarvis-learning" }
ethan-mcp = { path = "../openjarvis-mcp" }
ethan-sessions = { path = "../openjarvis-sessions" }
ethan-workflow = { path = "../openjarvis-workflow" }
ethan-skills = { path = "../openjarvis-skills" }
ethan-recipes = { path = "../openjarvis-recipes" }
ethan-templates = { path = "../openjarvis-templates" }
ethan-a2a = { path = "../openjarvis-a2a" }
ethan-scheduler = { path = "../openjarvis-scheduler" }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
